[gd_scene load_steps=8 format=2]

[ext_resource path="res://Font/mplus_hzk_12.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/ItemUI/BuildInfoNeedItem.gd" type="Script" id=2]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxTexture" id=5]

[sub_resource type="DynamicFont" id=6]
size = 13
outline_size = 2
outline_color = Color( 0.443137, 0.431373, 0.431373, 1 )
font_data = ExtResource( 1 )

[node name="BuildInfoNeedItem" type="Button"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -29.0
custom_fonts/font = SubResource( 6 )
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="." to="." method="_on_BuildInfoNeedItem_button_down"]
[connection signal="button_up" from="." to="." method="_on_BuildInfoNeedItem_button_up"]
[connection signal="tree_exited" from="." to="." method="_on_BuildInfoNeedItem_tree_exited"]
